# CampaignBot

./: .gitignore  Cargo.toml  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml
app/: Main.hs
src/: Expression.hs  Lib.hs  expression.pest  lib.rs  main.rs
