[package]
name = "campaignbot"
version = "0.1.1"
authors = ["sahay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "*"
rand = { version = "0.7.2", features = ["small_rng"] }
pest = "*"
pest_derive = "*" #"2.1.0"
lazy_static = "*" #"1.4.0"
redis = "*" #"0.13.0"
ddg = { git = "https://github.com/XAMPPRocky/ddg" } #"*" #"0.5.0"
openssl = { version = "0.10", features = ["vendored"] }
